--- a/work/first/index.html
+++ b/work/first/index.html
@@ -70,15 +70,57 @@
 <script src="../../common/js/jquery.js"></script>
 <script>
 // 第1問  id='q1'の要素の文字色を赤色にせよ。
+$(function() {
+  $("#q1").css('color', 'red');
 // 第2問  id='q2'の要素をクリックしたら背景色をピンクにせよ。
+  $("#q2").on('click', function() {
+    $("#q2").css('background-color', 'pink');
+  });
 // 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
+  $("#q3").on('click', function() {
+    $("#q3").fadeOut(2000);
+  })
 // 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
+  $('#q4').on('click', function() {
+    $('#q4').before("要素の前");
+    $('#q4').after("要素の後");
+    $('#q4').prepend("要素内の前");
+    $('#q4').append("要素内の後");
+  });
 // 第5問  id='q5'の要素をクリックしたらこの要素にlargeというクラスを付与せよ。
+  $('#q5').on('click', function() {
+    $('#q5').addClass('large');
+  });
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
+  $('#q6').on('click', function() {
+    $('#q6').css({'margin-top': '100px', 'margin-left': '100px'});
+  });
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
+  $('#q7 li').on('click', function() {
+    var index = $(this).index();
+    console.log(index);
+    alert(index);
+  });
 // 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
+  $('#q8').on({
+    'mouseover': function() {
+      $('#q8').addClass('large');
+    },
+    'mouseout': function() {
+      $('#q8').removeClass('large');
+    }
+  });
 // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
+  $('#q9').on('click', function() {
+    var data = $('#q9').data('text');
+    console.log(data);
+  });
 // 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
+  $('#q10 li').on('click', function() {
+    var lgindex = $(this).index();
+    $('#q11 li').eq(lgindex).addClass('large');
+  });
+});
 </script>
 </body>
 </html>
