--- a/work/third/index.html
+++ b/work/third/index.html
@@ -30,6 +30,15 @@
       // .eq() 引数に応じたindexの要素を指定します。
       // .addClass() クラスを追加します。
       // .removeClass() クラスを削除します。
+      $(function() {
+        $('.nav li').on('click', function() {
+          $('.contents li').not('is-hidden').addClass('is-hidden');
+
+          var navIndex = $(this).index();
+
+          $('.contents li').eq(navIndex).removeClass('is-hidden');
+        });
+      });
     </script>
   </body>
 </html>
