--- a/work/first/index.html
+++ b/work/first/index.html
@@ -79,7 +79,7 @@ $(function() {
 // 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
   $("#q3").on('click', function() {
     $("#q3").fadeOut(2000);
-  })
+  });
 // 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
   $('#q4').on('click', function() {
     $('#q4').before("要素の前");
@@ -93,7 +93,10 @@ $(function() {
   });
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
   $('#q6').on('click', function() {
-    $('#q6').css({'margin-top': '100px', 'margin-left': '100px'});
+    $('#q6').animate({
+      'margin-top': '100px',
+      'margin-left': '100px'
+    }, 2000);
   });
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
   $('#q7 li').on('click', function() {
