--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -56,6 +56,16 @@
       // .next() 要素の隣の要素を取得します。
       // .children() 要素の子要素を取得します。
       // .stop() 現在動作中のアニメーション処理を全て中止します。
+      $(function() {
+        $('.menu__list li').hover(
+          function() {
+            $(this).children().next().stop().slideDown();
+          },
+          function() {
+            $(this).children().next().stop().slideUp();
+          }
+        );
+      });
     </script>
   </body>
 </html>
