--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -97,6 +97,26 @@
       // .data('') DOM要素にあるdata-~を取得できる
       // .change() セレクトボックスの値の変更をキャッチする関数
       // $().each() DOM要素を1つずつループ処理をする（ループ内で$(this)を使うと要素がひとつずつ取得できる）
+      $(function() {
+        $('.select').change(function() {
+          var selected = $(this).val();
+
+          if (selected == 'all') {
+            $('.list').children().show();
+          }
+          else {
+              $('.list').children().hide();
+
+              $('.list').children().each(function() {
+                var dataCategoryType = $(this).data('category-type');
+
+                if (selected == dataCategoryType) {
+                  $(this).show();
+                }
+              })
+          }
+        })
+      });
     </script>
   </body>
 </html>
