--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -59,10 +59,10 @@
       $(function() {
         $('.menu__list li').hover(
           function() {
-            $(this).children().next().stop().slideDown();
+            $(this).children('.menu__list__childList').stop().slideDown();
           },
           function() {
-            $(this).children().next().stop().slideUp();
+            $(this).children('.menu__list__childList').stop().slideUp();
           }
         );
       });
