--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -64,6 +64,106 @@
       //   // この中にデータ取得後の動きを記述していきます。
       // });
       //
+      $(function() {
+        var inputKeyword = '';
+        var pageCounter;
+
+        function renderSearchResult(item) {
+          var renderHTML = '';
+
+          for (var i = 0; i < item.length; i++) {
+            var itemUrl = item[i].Item.itemUrl;
+            var largeImageUrl = item[i].Item.largeImageUrl;
+            var title = item[i].Item.title;
+            var author = item[i].Item.author;
+            var publisherName = item[i].Item.publisherName;
+            // 冗長すぎるので、改行してヒアドキュメント的に書けないものか・・・
+            var insertHTML = '<li class="lists__item"><div class="lists__item__inner"><a class="lists__item__link" target="_blank" href="' + itemUrl + '"><img class="lists__item__img" src="' + largeImageUrl + '" alt="' + title + '" /><p class="lists__item__detail">作品名：' + title + '</p><p class="lists__item__detail">作者　：' + author + '</p><p class="lists__item__detail">出版社：' + publisherName + '</p></a></div></li>';
+            renderHTML += insertHTML;
+          }
+
+          $('.lists').html(renderHTML);
+        }
+
+        function renderNextResult(item) {
+          var renderHTML = '';
+
+          for (var i = 0; i < item.length; i++) {
+            var itemUrl = item[i].Item.itemUrl;
+            var largeImageUrl = item[i].Item.largeImageUrl;
+            var title = item[i].Item.title;
+            var author = item[i].Item.author;
+            var publisherName = item[i].Item.publisherName;
+            // 冗長すぎるので、改行してヒアドキュメント的に書けないものか・・・
+            var insertHTML = '<li class="lists__item"><div class="lists__item__inner"><a class="lists__item__link" target="_blank" href="' + itemUrl + '"><img class="lists__item__img" src="' + largeImageUrl + '" alt="' + title + '" /><p class="lists__item__detail">作品名：' + title + '</p><p class="lists__item__detail">作者　：' + author + '</p><p class="lists__item__detail">出版社：' + publisherName + '</p></a></div></li>';
+            renderHTML += insertHTML;
+          }
+
+          $('.lists').prepend(renderHTML);
+        }
+
+        function newSearchAPI() {
+          pageCounter = 1;
+          $(".message").hide();
+          $(".lists__item").hide();
+          $.ajax({
+            url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20170404',
+            type: 'GET',
+            datatype: 'json',
+            data: {
+              applicationId: '1019399324990976605',
+              booksGenreId: '001',
+              keyword: inputKeyword,
+              hits: 20,
+              page: pageCounter
+            }
+          }).done(function(Data, Status) {
+            if (Data.count == 0) {
+              $(".search").after('<div class="message">検索結果が見つかりませんでした。<br>別のキーワードで検索してください。</div>');
+            } else {
+              renderSearchResult(Data.Items);
+            }
+          })
+          .fail(function() {
+            $(".search").after('<div class="message">通信エラー<br>問題が解決しない場合はお問い合わせください</div>');
+          })
+        }
+
+        function nextSearchAPI() {
+          pageCounter++;
+          $(".message").hide();
+          $.ajax({
+            url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20170404',
+            type: 'GET',
+            datatype: 'json',
+            data: {
+              applicationId: '1019399324990976605',
+              booksGenreId: '001',
+              keyword: inputKeyword,
+              hits: 20,
+              page: pageCounter
+            }
+          }).done(function(Data, Status) {
+            if (Data.count == 0) {
+              $(".search").after('<div class="message">検索結果は以上です。</div>');
+            }　else {
+              renderNextResult(Data.Items);
+            }
+          }).fail(function() {
+            $(".search").after('<div class="message">通信エラー<br>問題が解決しない場合はお問い合わせください</div>');
+          })
+        }
+
+        $('#js-search-button').on('click', function() {
+          if ($('#js-search-word').val() == inputKeyword) {
+            inputKeyword = $('#js-search-word').val();
+            nextSearchAPI();
+          } else {
+            inputKeyword = $('#js-search-word').val();
+            newSearchAPI();
+          }
+        })
+      });
     </script>
   </body>
 </html>
