--- a/work/ninth/index.html
+++ b/work/ninth/index.html
@@ -24,12 +24,17 @@
       // $.ajax({}) 外部ファイルやURLに対してデータをリクエストすることができます。これだけだと少しわからないと思うので下に文法を書いておきます。
       //
       // [文法]
-      // $.ajax({
-      //   url: './data.json'
-      // })
-      // .done(function(data) {
-      //   console.log(data);
-      // });
+      $.ajax({
+        url: './data.json'
+      })
+      .done(function(data) {
+        var test = data.colorsArray;
+        var insertHTML = '';
+        $(test).each(function() {
+          insertHTML += '<li class="colorList__item"><p class="colorList__title" style="background-color: ' + this.hexValue + ';">' + this.colorName + '</p></li>';
+        });
+        $('.colorList').html(insertHTML);
+      });
       //
       // 今回の場合は同じ階層にあるdata.jsonに対してリクエストを飛ばして、中にあるオブジェクトを取得します。
       // そのオブジェクトは
